# cpp-design-patterns

./: .gitignore  CMakeLists.txt  CommandDispatcher.h  ObjectFactory.cpp  ObjectFactory.h  README.md  TypeFactory.cpp  TypeFactory.h
commands/: CMakeLists.txt  ComputationContext.h  OrdinaryCitizenCommand.h  SeniorCitizenCommand.cpp
cpp-plugin-arch/: CommandDispatcher.h  ObjectFactory.cpp  ObjectFactory.h  TaxComputationFacade.h  TypeFactory.h  config.xml  main.cpp
cpp-plugin-arch/commands/: BaseComputationCommand.h  ComputationContext.cpp  OrdinaryCitizenCommand.cpp  SeniorCitizenCommand.h  TaxableEntity.h
cpp-plugin-arch/util/: XMLHelper.cpp
embed-cpp-in-python/: main.py  my_sum.py  mysum.cpp  setup.py
embed-python-in-cpp/: Dockerfile  main.cpp  multiply.py
jni/: HelloJNI.c  HelloJNI.java  README.md
load-balancer-strategy/: LoadBalancer.h  LoadBalancerStrategy.h  RandomStrategy.h  RoundRobinStrategy.h  main.cpp
logging-library/: Logger.h  LoggerFactory.h  README.md  main.cpp
logging-library/content-writer/: BaseContentWriter.h  DbContentWriter.h  NetworkContentWriter.h
logging-library/strategy/: DbLogStrategy.h  FileLogStrategy.h  LogStrategy.h  NetLogStrategy.h  NullLogStrategy.h
logging-library/util/: TcpClient.h  ThreadSafeQueue.h
scheduler/: IScheduler.h  README.md  SimpleScheduler.cpp  SimpleScheduler.h  main.cpp
util/: XMLHelper.h
workflow-executor/: CMakeLists.txt  README.md  config_generator.py  grades.csv  grades_processed.csv  main.cpp  main.py  sample-tree.xml  sample-workflow.xml
workflow-executor/commands/: BaseComputationCommand.h  CommandAttributes.h  ComputationContext.cpp  ComputationContext.h  PythonCommand.cpp  PythonCommand.h
workflow-executor/execution-engine/: WorkflowExecutor.h
workflow-executor/model/: DAG.h  Graph.h  Tree.h
workflow-executor/parser/: XmlTreeParser.h  XmlWorkflowParser.h  common.h
workflow-executor/python-commands/: CalculateAverage.py  CalculateSum.py  ExportCsv.py  ImportCsv.py
workflow-executor/util/: PythonInterpreter.cpp  PythonInterpreter.h
